recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: reassignment to val
		steps=steps-1;
                     ^Spiral:7: error: reassignment to val
		length=length+increment;
                      ^