recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if (steps!=0) {
		avance(length);
		droite(angle);
		steps=steps-1;
		length=length+increment;
		spiral(steps, angle, length, increment)
	}
	else {
		return	
	}
}
